--- a/story/Botany/topics/story-mode/5/story1.html
+++ b/story/Botany/topics/story-mode/5/story1.html
@@ -1,112 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Story</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
-    <link rel="stylesheet" href="../../../../css/story.css">
-</head>
-<body>
-    <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="100000">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselFade" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselFade" data-slide-to="1"></li>
-        <li data-target="#carouselFade" data-slide-to="2"></li>
-        <li data-target="#carouselFade" data-slide-to="3"></li>
-        <li data-target="#carouselFade" data-slide-to="4"></li>
-        <li data-target="#carouselFade" data-slide-to="5"></li>
-        <li data-target="#carouselFade" data-slide-to="6"></li>
-        <li data-target="#carouselFade" data-slide-to="7"></li>
-        <li data-target="#carouselFade" data-slide-to="8"></li>
-        <li data-target="#carouselFade" data-slide-to="9"></li>
-        <li data-target="#carouselFade" data-slide-to="10"></li>
-        <li data-target="#carouselFade" data-slide-to="11"></li>
-        <li data-target="#carouselFade" data-slide-to="12"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../../../../img/story/#" alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Fourth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Fifth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Sixth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Seventh slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Eight slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Nineth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Tenth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Eleventh slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Twelveth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../../img/story/#" alt="Final slide">
-        </div>
-        <div class="carousel-item">
-            <video autoplay muted loop>
-                <source src="../../../../videos/advertise01.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <div class="container">
-            <div class="carousel-caption">                        
-                <a href="https://cutt.ly/kf2GtNy" class="btn btn-lg btn-outline-danger" role="button">Download</a>
-                <a href="../../chapter-5.html" class="btn btn-lg btn-outline-warning" role="button">Return</a>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Structure of Ulothrix Story</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+        <link rel="stylesheet" href="../../../../css/story.css">
+    </head>
+    <body>
+        <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="100000">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselFade" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselFade" data-slide-to="1"></li>
+            <li data-target="#carouselFade" data-slide-to="2"></li>
+            <li data-target="#carouselFade" data-slide-to="3"></li>
+            <li data-target="#carouselFade" data-slide-to="4"></li>
+            <li data-target="#carouselFade" data-slide-to="5"></li>
+            <li data-target="#carouselFade" data-slide-to="6"></li>
+            <li data-target="#carouselFade" data-slide-to="7"></li>
+            <li data-target="#carouselFade" data-slide-to="8"></li>
+            <li data-target="#carouselFade" data-slide-to="9"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide1.JPG" alt="First slide">
             </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide2.JPG" alt="Second slide">
             </div>
-           
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide3.JPG" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide4.JPG" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide5.JPG" alt="Fifth slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide6.JPG" alt="Sixth slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide7.JPG" alt="Seventh slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide8.JPG" alt="Eight slide">
+            </div>
+            <div class="carousel-item">
+                <img src="../../../../img/story/Botany/5/Structure-of-ulothrix/Slide9.JPG" alt="Final slide">
+            </div>
+            <div class="carousel-item">
+                <video autoplay muted loop>
+                    <source src="../../../../videos/advertise01.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="container">
+                <div class="carousel-caption">                        
+                    <a href="https://cutt.ly/kf2GtNy" class="btn btn-lg btn-outline-danger" role="button">Download</a>
+                    <a href="../../chapter-5.html" class="btn btn-lg btn-outline-warning" role="button">Return</a>
+                </div>
+                </div>
+               
+        </div>
+        <a class="carousel-control-prev" href="#carouselFade" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselFade" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselFade" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselFade" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-</div>
-<script src="../../../../js/firebase.js"></script>
-<script>
-    var mainApp = {};
-(function() {
-    var firebase = app_firebase;
-var uid = null;
-firebase.auth().onAuthStateChanged(function(user) {
-  if (user) {
-    // User is signed in.
-    uid = user.uid;
-  }else {
-      window.location.replace("../../../../index.html");
-  }
-});
-})()
-</script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
-</html>
+    </div>
+    <script src="../../../../js/firebase.js"></script>
+    <script src="../../../../js/story.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    </body>
+    </html>
