--- a/story/home.html
+++ b/story/home.html
@@ -66,24 +66,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 <script src="js/firebase.js"></script>
-<script>
-    var mainApp = {};
-(function() {
-    var firebase = app_firebase;
-var uid = null;
-firebase.auth().onAuthStateChanged(function(user) {
-  if (user) {
-    // User is signed in.
-    uid = user.uid;
-  }else {
-      window.location.replace("index.html");
-  }
-});
-    function logOut(){
-        firebase.auth().signOut();
-    }
-    mainApp.logOut = logOut;
-})()
-</script>
+<script src="js/home.js"></script>
 </body>
 </html>
